2010-01-25  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/Environment.h: Environment::assign gains a templated
	form so that we can assign anything that can be wrapped to 
	a name in an environment

	* inst/unitTests/runit.environments.R: new unit test 
	'test.environment.assign.templated' to test the templated assign

	* src/Makevars(.win?): listen to the RCPP_CXX0X environment variable
	and if set to "yes" attempt to add c++0x support if possible

2010-01-24  Romain Francois <francoisromain@free.fr>

	* src/SimpleVector.h : new template to replace simple vector 
	classes. now NumericVector, IntegerVector, LogicalVector, 
	ComplexVector and RawVector are all generated from the same
	template class. A first attempt at matrix indexing is added
	as part of this.

	* int/unitTests/runit.NumericVector.R: new unit tests about 
	matrix indexing
	
	* src/Rcpp/VectorBase.h: added the exception not_a_matrix
	that is thrown when attempting to perform matrix indexing on 
	a vector that is not a matrix.

2010-01-23  Romain Francois <francoisromain@free.fr>

	* src/wrap.cpp: s/copy/std::copy/

	* src/RcppDateTime.h: explicitely include <time.h> (win64 warning)

2010-01-22  Romain Francois <francoisromain@free.fr>

	* src/Makevars.win: disable c++0x entirely (for now)

	* src/Rcpp/Environment.h: make sure what() is const. (suncc finding)

	* src/RcppCommon.h: pre declare classes, as an attempt to 
	deal with the suncc warning "RObject may not have a type qualifier."

	* src/Rcpp/*.h: make sure RcppCommon.h is the first included header

	* src/*cpp: make sure foo.cpp only include Rcpp/foo.h

	* src/Environment.cpp: use Evaluator instead of R_ToplevelExec

	* src/RcppFunction.{h,cpp}: listen to some suncc warnings

	* src/RcppFrame.cpp: listen to some suncc warnings

	* src/as.cpp: use transform instead of assign, which should 
	make the code more portable (particularly suncc) and also 
	deal with coercion

2010-01-21  Dirk Eddelbuettel  <edd@debian.org>
